Add footer links

--- a/src/_data/links.yaml
+++ b/src/_data/links.yaml
@@ -1,4 +1,8 @@
 ---
 links:
-  - title: Twitter
-    url: https://github.com/mz496_
+  - title: Instagram
+    url: https://instagram.com/blueticksound
+  - title: SoundCloud
+    url: https://soundcloud.com/blueticksound
+  - title: Email
+    url: mailto:blueticksoundofficial@gmail.com
